k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80  # Port externe
      targetPort: 8080  # Port interne (doit correspondre à containerPort dans le deployment.yaml)
  type: ClusterIP
